fix: prevent zoom on input on ios

--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,8 @@ input {
   width: 100%;
   box-sizing: border-box;
   margin-top: 5%;
+  font-size: 16px;
+  transform: scale(1);
 }
 
 .recipesDesign {
